--- a/hooks/build
+++ b/hooks/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 VERSION=$(cat hooks/VERSION)
-IMAGE_NAME="chentex/random-logger"
+IMAGE_NAME="HHMI-HQ/random-logger"
 export VERSION
 export IMAGE_NAME
 
